chore: Ability to run :AnimatedTransitions:ImageBrowser